# Hazard

./: Cargo.toml  LICENSE  README.md  install_dependecies.sh
src/: main.rs
utils/arguments/: Cargo.toml
utils/arguments/src/: lib.rs
utils/display/: Cargo.toml
utils/display/src/: lib.rs
utils/file/: Cargo.toml
utils/file/src/: lib.rs
utils/modes/: Cargo.toml
utils/modes/src/: lib.rs
